--- a/src/css/Register.css
+++ b/src/css/Register.css
@@ -39,7 +39,9 @@ font-weight: 600;
  .btn-primary{
    background-color: transparent;
  }
- a{
+ a,
+ .reg-p{
   color: inherit;
   text-decoration: none;
+  padding-left: 20px;
  }
