--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -11,6 +11,7 @@
   color: grey;
   padding: 15px;
   border-radius: 30px;
+  font-weight: 600px;
   background-color: white;
   display: flex;
   align-items: center;
